MarcoKitTests/TestData/error/object8.marco
--before
{a trueb false}

--after
7-8: Whitespace required between object entries
